# BrickBreak

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  clean_prj.bat  clean_prj.sh  gen_prj_makefile.sh  gen_prj_vs2019.bat  gen_prj_vs2022.bat
cmake/: dependencies.cmake  utils.cmake
examples/: CMakeLists.txt
examples/ex_Box2d_Raylib/: CMakeLists.txt  main.cpp
examples/ex_BrickBreak/: CMakeLists.txt  main.cpp
examples/ex_Jolt/: CMakeLists.txt  main.cpp
examples/ex_RapidJson/: CMakeLists.txt  main.cpp
examples/ex_Raylib/: CMakeLists.txt  main.cpp
examples/ex_Raylib_Raygui/: CMakeLists.txt  main.cpp
examples/ex_Raylib_imgui/: CMakeLists.txt  main.cpp
resources/: config.json
sources/: Game.cpp  Game.h  GameState.cpp  GameState.h  GameStateLayer.cpp  GameStateLayer.h  GameStateManager.cpp  GameStateManager.h  GameStateType.h  GlobalValriables.h  GlobalVariables.cpp  GlobalVariables.h  Logger.h  main.cpp
sources/Entity/: GS_GameplayData.h
sources/GameLayer/: GL_Entity_Gameplay.cpp  GL_Entity_Gameplay.h  GL_Imgui.cpp  GL_Imgui.h  GUI_MainMenuLayer.cpp  GUI_MainMenuLayer.h  HUD_GameplayLayer.cpp  HUD_GameplayLayer.h
sources/GameState/: GS_EndGame.cpp  GS_EndGame.h  GS_Gameplay.cpp  GS_Gameplay.h  GS_MainMenu.cpp  GS_MainMenu.h  GS_Setting.cpp  GS_Setting.h
tests/: CMakeLists.txt
